# zkp-privacy-airdrop

./: .env.example  .gitignore  .rustfmt.toml  .solhint.json  CLAIMANT_GUIDE.md  CODE_REVIEW.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_FEB_12_2026.md  CODE_REVIEW_FEB_13_2026.md  CODE_REVIEW_FEB_13_2026_FINAL.md  CODE_REVIEW_FEB_13_2026_FINAL_UPDATE.md  CODE_REVIEW_FEB_13_2026_SECURITY_FIXES.md  CODE_REVIEW_FEB_13_2026_UPDATED.md  CODE_REVIEW_FEB_14_2026.md  CODE_REVIEW_FEB_15_2026.md  CODE_REVIEW_FEB_15_2026_FINAL.md  CODE_REVIEW_FEB_16_2026.md  CODE_REVIEW_FEB_16_2026_SESSION2.md  CODE_REVIEW_FEB_2026.md  CODE_REVIEW_IMPLEMENTATION.md  CODE_REVIEW_IMPLEMENTATION_FEB_14.md  CODE_REVIEW_NEW.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_ISSUES.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_UPDATES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMISM_MIGRATION_SUMMARY.md  PLONK-README.md  QUICKSTART.md  README.md  REVIEW_IMPLEMENTATION.md  REVIEW_SUMMARY.md  SECURITY.md  clippy.toml  docker-compose.yml
.github/workflows/: test.yml
circuits/: .gitignore  Makefile  package-lock.json  package.json
circuits/src/: merkle_membership.circom  test.circom
circuits/test/: test.js
cli/: Cargo.toml  Makefile
cli/src/: config.rs  crypto.rs  main.rs  plonk_prover.rs  tree.rs  types.rs  types_plonk.rs
cli/src/commands/: check_status.rs  config_cmd.rs  download_tree.rs  generate_proof.rs  generate_proof_plonk.rs  mod.rs  submit.rs  verify_proof.rs
contracts/: Makefile  hardhat.config.js  package-lock.json  package.json
contracts/scripts/: deploy-mainnet.ts  deploy-testnet.ts  merkle-utils.ts
contracts/src/: BasePrivacyAirdrop.sol  PLONKVerifier.sol  PrivacyAirdrop.sol  PrivacyAirdropPLONK.sol  RelayerRegistry.sol  Verifier.sol  ZKPToken.sol
contracts/test/: PLONKVerifier.test.js  PLONKVerifier.test.ts  PrivacyAirdropPLONK.test.js  PrivacyAirdropPLONK.test.ts
docs/: 00-specification.md  01-overview.md  02-technical-specification.md  03-implementation-roadmap.md  04-api-reference.md  05-security-privacy.md  06-privacy-analysis.md  07-consistency-checklist.md  08-plonk-migration.md  09-plonk-prototype-summary.md  10-week2-cli-integration.md  11-phase3-progress-report.md  PLONK_PROOF_GENERATION.md  README.md  inconsistencies-fixed.md  nullifier-fix-summary.md  week1-complete-summary.md  week2-progress-summary.md
prometheus/: prometheus.yml
relayer/: Cargo.toml  Dockerfile  Makefile  PrivacyAirdropPLONK.json
relayer/migrations/: 20240101000001_initial_schema.sql
relayer/src/: config.rs  db.rs  errors.rs  handlers.rs  lib.rs  main.rs  metrics.rs  redis.rs  state.rs  types.rs  types_plonk.rs
relayer/tests/: config_tests.rs
scripts/: 01-download-powersoftau.sh  02-generate-plonk-provingkey.sh  03-generate-verifier-contract.sh  test_plonk.sh  test_plonk_integration.sh  week1-complete-setup.sh
shared/: Cargo.toml
shared/src/: constants.rs  errors.rs  lib.rs  types.rs
tests/: conftest.py  merkle.test.js  pyproject.toml  requirements-test.txt  test_api.py  test_plonk.py  test_web3.py
tree-builder/: Cargo.toml  Makefile
tree-builder/src/: io.rs  main.rs  poseidon.rs  tree.rs
