[workspace]
members = [
    "cli",
    "relayer",
    "tree-builder",
    "shared",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zkp-privacy-airdrop/zkp-privacy-airdrop"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ethers = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
zeroize = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
zkp-airdrop-utils = { path = "shared" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
