[package]
name = "zkp-airdrop-relayer"
version = "1.0.0"
edition = "2021"
description = "Relayer API service for ZKP Privacy Airdrop"
license = "MIT"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
ethers = "2.0"
hex = "0.4"
futures-util = "0.3"
dotenv = "0.15"
config = "0.14"
once_cell = "1.19"
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
parking_lot = "0.12"
sha3 = "0.10"
bytes = "1.5"
derive_more = "0.99"
uuid = { version = "1.6", features = ["v4", "serde"] }
zeroize = "1.7"
num-bigint = "0.4"
num-traits = "0.2"
url = "2.5"
regex = "1.10"
