[package]
name = "zkp-airdrop-tree-builder"
version = "1.0.0"
edition = "2021"
description = "Merkle tree builder for ZKP Privacy Airdrop"
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
csv = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.8"
tempfile = "3.8"
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ark-bn254 = "0.4"
ark-ff = "0.4"
sha3 = "0.10"
zkp-airdrop-utils = { path = "../shared" }
